compiling_error.txt
/Users/akanshajain/WORK/C/Ques 6.c:7:1: error: version control conflict marker in file
<<<<<<< HEAD
^
1 error generated.
